--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,21 @@
 
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.show-sql=true
+spring.datasource.url=jdbc:postgresql://localhost:5432/capstone_backend
+spring.datasource.username=
+spring.datasource.password=
+
+spring.datasource.initialization-mode=always
+spring.datasource.initialize=true
+
+spring.datasource.continue-on-error=true
+spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=create-drop
+
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
+
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+server.error.include-message = always
