--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.show-sql=true
-spring.datasource.url=jdbc:postgresql://localhost:5432/capstone_backend
+#spring.datasource.url=jdbc:postgresql://localhost:5432/capstone_backend
 spring.datasource.username=
 spring.datasource.password=
 
